--- a/index.html
+++ b/index.html
@@ -8,6 +8,91 @@
     <title>Lesson-16</title>
   </head>
   <body>
-    <h1>Hello world</h1>
+    <div class="container">
+      <header>
+        <ul>
+          <li><a href="#home">Home</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#blog">Blog</a></li>
+          <li><a href="#contact">Contact</a></li>
+          <li><a href="#courses">Courses</a></li>
+        </ul>
+        <div class="header__box">
+          <img src="./images/111.svg" alt="frame-1" />
+          <img src="./images/222.svg" alt="frame-2" />
+          <button>Sign up</button>
+        </div>
+      </header>
+      <div class="cards">
+        <div class="card">
+          <div class="card-1">
+            <h1 class="steel1">Become an No-Code expert and find a job</h1>
+            <p class="text1">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              Vestibulum vel molestie magna curabitur tincidunt nunc sit amet.
+            </p>
+            <div class="kitchen">
+              <button class="text2">Explore Courses</button>
+              <img src="./images/333.svg" alt="" />
+            </div>
+            <img src="./images/444.svg" alt="" />
+          </div>
+          <img class="seven" src="./images/555.svg" alt="" />
+          <img class="nine" src="./images/666.svg" alt="" />
+        </div>
+      </div>
+      <div class="nav">
+        <div class="nav__page">
+          <p class="text3">Trusted by the world's best companies</p>
+        </div>
+        <div class="nav__page2">
+          <button class="tugma">About us</button>
+          <h1 class="steel5">No-code Education Platform</h1>
+          <p class="text5">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse
+            varius enim in eros elementum tristique. Duis cursus, mi quis
+            viverra ornare, eros dolor interdum nulla, ut commodo diam libero
+            vitae erat.
+          </p>
+          <button class="tugma2">About us</button>
+        </div>
+      </div>
+      <div class="nav2">
+        <div class="nav2__page">
+          <img src="./images/777.svg" alt="" />
+          <div class="soft">
+            <h1 class="steel6">Premium courses from the industry leaders</h1>
+            <p class="text6">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              Suspendisse varius enim in eros elementum tristique. Duis cursus,
+              mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam
+              libero vitae erat.
+            </p>
+            <div class="two">
+              <button>Get started</button>
+              <img src="./images/888.svg" alt="" />
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="nav3">
+        <div class="nav3__page">
+          <div class="extra">
+            <h1 class="steel7">Easily find the perfect course for you</h1>
+            <p class="text7">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              Suspendisse varius enim in eros elementum tristique. Duis cursus,
+              mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam
+              libero vitae erat.
+            </p>
+            <div class="max">
+              <button>Get started</button>
+              <img src="./images/888.svg" alt="" />
+            </div>
+          </div>
+          <img src="./images/999.svg" alt="" />
+        </div>
+      </div>
+    </div>
   </body>
 </html>
